package com.ks.fitpass.department.dto;

import lombok.*;

@NoArgsConstructor
@AllArgsConstructor
@Setter
@Getter
public class DepartmentNotificationDTO {
    private String departmentName;
    private String departmentLogoUrl;
}
